Fix galaxy overflow

--- a/client/views/home/home.scss
+++ b/client/views/home/home.scss
@@ -90,6 +90,7 @@ $text-color: #A9A9A9;
 
   .section {
     position: relative;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
